# Insta-Car

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
authentication/: forms.py  views.py
insta_comment/: admin.py  apps.py  forms.py  models.py  views.py
insta_comment/migrations/: 0001_initial.py
insta_post/: admin.py  apps.py  forms.py  models.py  views.py
insta_post/migrations/: 0001_initial.py  0002_auto_20201007_1459.py  0002_auto_20201016_1836.py  0003_comment_likes.py  0003_favoritecar_car_image.py  0004_auto_20201016_2058.py  0005_auto_20201017_0003.py  0006_delete_comment.py
insta_search/: apps.py  forms.py  views.py
insta_user/: admin.py  apps.py  forms.py  models.py  views.py
insta_user/migrations/: 0001_initial.py  0002_favoritecar.py  0002_instauser_following.py  0003_useremail.py  0004_useremail_author.py  0005_auto_20201007_0306.py  0006_delete_favoritecar.py
instacar/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: john-copy.css  john-style.css  lori-style.css  style.css
templates/: 404.html  500.html  base.html  comment_form.html  edit_profile.html  generic_form.html  index.html  navbar.html  photo-modal.html  photo_detail.html  profile_form.html  search_results.html  testedit.html  user_detail.html  yearmakemodel.html
