[tool.poetry]
name = "instacar"
version = "0.1.0"
description = "An Instagram-like site for car enthusiasts"
authors = ["Jessica Benson <pokeyjess72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

django-cleanup==5.0.0 
Pillow==7.2.0 
django-rotate-secret-key==0.3